--- a/.github/workflows/BuildAndPullDockers.yml
+++ b/.github/workflows/BuildAndPullDockers.yml
@@ -1,8 +1,6 @@
 name: Build and Push Docker Image
 on:
-  push:
-    branches:
-      - master
+  workflow_dispatch:
 jobs:
   build:
     runs-on: ubuntu-latest
