--- a/.github/workflows/BuildAndPullDockers.yml
+++ b/.github/workflows/BuildAndPullDockers.yml
@@ -9,6 +9,11 @@ jobs:
       uses: actions/setup-go@v2
       with:
         go-version: '1.9'
+    - name: Checkout code
+      uses: actions/checkout@v3
+      with:
+        # Full git history is needed to get a proper list of changed files within `super-linter`
+        fetch-depth: 0
     - name: Build Go application
       run: cd broker-service && go build -o authApp ./cmd/api
     - name: Build Docker image
