--- a/.github/workflows/BuildAndPullDockers.yml
+++ b/.github/workflows/BuildAndPullDockers.yml
@@ -14,6 +14,12 @@ jobs:
       with:
         # Full git history is needed to get a proper list of changed files within `super-linter`
         fetch-depth: 0
+    - name: Get chi
+      run: go mod download github.com/go-chi/chi/v5
+    - name: Get chi middlware
+      run: go mod download github.com/go-chi/chi/v5/middleware
+    - name: Get chi cors
+      run: go mod download github.com/go-chi/cors
     - name: Build Go application
       run: cd broker-service && go build -o authApp ./cmd/api
     - name: Build Docker image
