--- a/.github/workflows/BuildAndPullDockers.yml
+++ b/.github/workflows/BuildAndPullDockers.yml
@@ -15,7 +15,7 @@ jobs:
         # Full git history is needed to get a proper list of changed files within `super-linter`
         fetch-depth: 0
     - name: Get dep
-      run: go get -u -v -f all
+      run: go mod download
     - name: Build Go application
       run: cd broker-service && go build -o authApp ./cmd/api
     - name: Build Docker image
