--- a/.github/workflows/BuildAndPullDockers.yml
+++ b/.github/workflows/BuildAndPullDockers.yml
@@ -16,8 +16,8 @@ jobs:
     - name: Build Go application
       run: cd broker-service && env GOOS=linux CGO_ENABLED=0 go build -o brokerApp ./cmd/api
     - name: Build Docker image
-      run: cd broker-service && docker build -t registry.digitalocean.com/lingvini/authapp:latest . -f broker-service.dockerfile
+      run: cd broker-service && docker build -t registry.digitalocean.com/lingvini/brokerapp:latest . -f broker-service.dockerfile
     - name: Login to DigitalOcean Registry
       run: echo ${{ secrets.DO_API_TOKEN }} | docker login -u ${{ secrets.DO_API_TOKEN }} --password-stdin registry.digitalocean.com
     - name: Push to DigitalOcean Registry
-      run: docker push registry.digitalocean.com/lingvini/authApp:latest
+      run: docker push registry.digitalocean.com/lingvini/brokerapp:latest
