--- a/.github/workflows/BuildAndPullToDockerHub.yml
+++ b/.github/workflows/BuildAndPullToDockerHub.yml
@@ -15,10 +15,10 @@ jobs:
         fetch-depth: 0
         
     - name: Login to Docker Hub
-      uses: ghcr.io/actions/docker-login@v2
+      uses: docker/login-action@v2
       with:
         username: ${{ secrets.DOCKER_USERNAME }}
-        password: ${{ secrets.DOCKER_PASSWORD }}
+        password: ${{ secrets.DOCKER_TOKEN }}
         
     - name: Build brokerApp application
       run: cd broker-service && env GOOS=linux CGO_ENABLED=0 go build -o brokerApp ./cmd/api
