--- a/.github/workflows/BuildAndPullToDockerHub.yml
+++ b/.github/workflows/BuildAndPullToDockerHub.yml
@@ -1,4 +1,4 @@
-name: Build and Push to DockerHub
+Hname: Build and Push to DockerHub
 on:
   workflow_dispatch:
 jobs:
@@ -24,12 +24,12 @@ jobs:
       run: cd broker-service && env GOOS=linux CGO_ENABLED=0 go build -o brokerApp ./cmd/api
     - name: Build brokerApp Docker image
       run: cd broker-service && docker build -t arkadiyagapov/linguini/brokerapp:latest . -f broker-service.dockerfile
-    - name: Push brokerApp to DigitalOcean Registry
+    - name: Push brokerApp to DockerHUB
       run: docker push arkadiyagapov/linguini/brokerapp:latest
     
     - name: Build authApp application
       run: cd authentication-service && env GOOS=linux CGO_ENABLED=0 go build -o authApp ./cmd/api
     - name: Build authApp Docker image
       run: cd authentication-service && docker build -t arkadiyagapov/linguini/authapp:latest . -f authentication-service.dockerfile
-    - name: Push authApp to DigitalOcean Registry
+    - name: Push authApp to DockerHUB
       run: docker push arkadiyagapov/linguini/authapp:latest
