--- a/.github/workflows/deploycompose.yml
+++ b/.github/workflows/deploycompose.yml
@@ -1,8 +1,6 @@
 name: Deploy to DigitalOcean
 on:
-  push:
-    branches:
-      - master
+  workflow_dispatch:
 jobs:
   deploy:
     runs-on: ubuntu-latest
