--- a/.github/workflows/deploycompose.yml
+++ b/.github/workflows/deploycompose.yml
@@ -14,7 +14,7 @@ jobs:
       with:
         ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY_LING_1 }}
     - name: Copy Docker Compose to server
-      uses: appleboy/scp-action@v1
+      uses: appleboy/scp-action@master
       with:
         host: ${{ secrets.HOST }}
         username: ${{ secrets.USERNAME_LING_1 }}
