--- a/project/Makefile
+++ b/project/Makefile
@@ -2,6 +2,7 @@ FRONT_END_BINARY=frontApp
 BROKER_BINARY=brokerApp
 FRONT_BINARY=frontApp
 AUTH_BINARY=authApp
+LOGS_BINARY=logsApp
 
 ## up: starts all containers in the background without forcing build
 up:
@@ -10,7 +11,7 @@ up:
 	@echo "Docker images started!"
 
 ## up_build: stops docker-compose (if running), builds all projects and starts docker compose
-up_build: build_broker build_auth build_front
+up_build: build_broker build_auth build_front build_logs
 	@echo "Stopping docker images (if running...)"
 	docker-compose down
 	@echo "Building (when required) and starting docker images..."
@@ -33,6 +34,12 @@ build_broker:
 build_auth:
 	@echo "Building auth binary..."
 	cd ../authentication-service && env GOOS=linux CGO_ENABLED=0 go build -o ${AUTH_BINARY} ./cmd/api
+	@echo "Done!"
+
+## build_auth: builds the auth binary as a linux executable
+build_logs:
+	@echo "Building logs binary..."
+	cd ../logger-service && env GOOS=linux CGO_ENABLED=0 go build -o ${LOGS_BINARY} ./cmd/api
 	@echo "Done!"
 
 ## build_front: builds the front end binary
