added logger service deployment

--- a/.github/workflows/BuildAndPullToDockerHub.yml
+++ b/.github/workflows/BuildAndPullToDockerHub.yml
@@ -43,6 +43,13 @@ jobs:
     - name: Push frontApp to DockerHUB
       run: docker push arkadiyagapov/frontapp:latest
 
+    - name: Build loggerApp application
+      run: cd logger-service && env GOOS=linux CGO_ENABLED=0 go build -o loggerServiceApp ./cmd/web
+    - name: Build frontApp Docker image
+      run: cd logger-service && docker build -t arkadiyagapov/loggerserviceapp:latest . -f logger-service.dockerfile
+    - name: Push frontApp to DockerHUB
+      run: docker push arkadiyagapov/loggerserviceapp:latest
+
   deploy:
     needs: build
     runs-on: ubuntu-latest
