--- a/project/docker-compose-hub.yml
+++ b/project/docker-compose-hub.yml
@@ -2,7 +2,7 @@ version: '3'
 
 services:
 
-  front-end-service:
+  front-end-service-1:
     image: 'arkadiyagapov/frontapp:latest'
     restart: always
     ports:
