--- a/project/Makefile
+++ b/project/Makefile
@@ -3,6 +3,7 @@ BROKER_BINARY=brokerApp
 FRONT_BINARY=frontApp
 AUTH_BINARY=authApp
 LOGS_BINARY=loggerServiceApp
+MAIL_BINARY=mailerApp
 
 ## up: starts all containers in the background without forcing build
 up:
@@ -11,7 +12,7 @@ up:
 	@echo "Docker images started!"
 
 ## up_build: stops docker-compose (if running), builds all projects and starts docker compose
-up_build: build_broker build_auth build_front build_logs
+up_build: build_broker build_auth build_front build_logs build_mail
 	@echo "Stopping docker images (if running...)"
 	docker-compose down
 	@echo "Building (when required) and starting docker images..."
@@ -40,6 +41,12 @@ build_auth:
 build_logs:
 	@echo "Building logs binary..."
 	cd ../logger-service && env GOOS=linux CGO_ENABLED=0 go build -o ${LOGS_BINARY} ./cmd/api
+	@echo "Done!"
+
+## build_mail: builds the mail binary as a linux executable
+build_mail:
+	@echo "Building mail binary..."
+	cd ../mail-service && env GOOS=linux CGO_ENABLED=0 go build -o ${MAIL_BINARY} ./cmd/api
 	@echo "Done!"
 
 ## build_front: builds the front end binary
