Fixed docker compose file

--- a/project/docker-compose-hub.yml
+++ b/project/docker-compose-hub.yml
@@ -47,9 +47,7 @@ services:
       DSN: "host=postgres port=5432 user=postgres password=password dbname=users sslmode=disable timezone=UTC connect_timeout=5"
 
   mailer-service:
-    build:
-      context: ./../mail-service
-      dockerfile: ./../mail-service/mail-service.dockerfile
+    image: 'arkadiyagapov/mailserviceapp:latest'
     restart: always
     deploy:
       mode: replicated
