Added listener service

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,8 @@
 /project/db-data/
+/authentication-service/authApp
+/broker-service/brokerApp
+/front-end/frontApp
+/listener-service/listenerApp
+/logger-service/loggerServiceApp
+/mail-service/mailerApp
+.idea
