--- a/project/Makefile
+++ b/project/Makefile
@@ -6,6 +6,32 @@ LOGS_BINARY=loggerServiceApp
 MAIL_BINARY=mailerApp
 LISTENER_BINARY=listenerApp
 
+dockers_build_deploy: docker_deploy_broker docker_deploy_listener docker_deploy_authentication docker_deploy_logger docker_deploy_mail docker_deploy_front
+
+docker_deploy_broker: build_broker
+	cd ../broker-service && docker build -f broker-service.dockerfile -t arkadiyagapov/brokerapp:1.0.1 .
+	docker push arkadiyagapov/brokerapp:1.0.1
+
+docker_deploy_listener: build_listener
+	cd ../listener-service && docker build -f listener-service.dockerfile -t arkadiyagapov/listenerapp:1.0.0 .
+	docker push arkadiyagapov/listenerapp:1.0.0
+
+docker_deploy_authentication: build_auth
+	cd ../authentication-service && docker build -f authentication-service.dockerfile -t arkadiyagapov/authapp:1.0.0 .
+	docker push arkadiyagapov/authapp:1.0.0
+
+docker_deploy_logger: build_logs
+	cd ../logger-service && docker build -f logger-service.dockerfile -t arkadiyagapov/loggerserviceapp:1.0.0 .
+	docker push arkadiyagapov/loggerserviceapp:1.0.0
+
+docker_deploy_mail: build_mail
+	cd ../mail-service && docker build -f mail-service.dockerfile -t arkadiyagapov/mailserviceapp:1.0.0 .
+	docker push arkadiyagapov/mailserviceapp:1.0.0
+
+docker_deploy_front: build_front
+	cd ../front-end && docker build -f front-end-service.dockerfile -t arkadiyagapov/frontapp:1.0.0 .
+	docker push arkadiyagapov/frontapp:1.0.0
+
 ## up: starts all containers in the background without forcing build
 up:
 	@echo "Starting Docker images..."
