--- a/.github/workflows/BuildAndPullToDockerHub.yml
+++ b/.github/workflows/BuildAndPullToDockerHub.yml
@@ -119,8 +119,31 @@ jobs:
       - name: Push mailServiceApp to DockerHUB
         run: docker push arkadiyagapov/mailserviceapp:latest
 
+  buildListenerApp:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Set up Go
+        uses: actions/setup-go@v2
+        with:
+          go-version: '1.x'
+      - name: Checkout code
+        uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
+      - name: Login to Docker Hub
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_TOKEN }}
+      - name: Build listenerApp application
+        run: cd listener-service && env GOOS=linux CGO_ENABLED=0 go build -o listenerApp ./cmd/api
+      - name: Build listenerServiceApp Docker image
+        run: cd mail-service && docker build -t arkadiyagapov/listenerapp:latest . -f listener-service.dockerfile
+      - name: Push listenerApp to DockerHUB
+        run: docker push arkadiyagapov/listenerapp:latest
+
   deploy:
-    needs: [buildBrokerApp, buildAuthApp, buildFrontApp, buildLoggerApp, buildMailApp]
+    needs: [buildBrokerApp, buildAuthApp, buildFrontApp, buildLoggerApp, buildMailApp, buildListenerApp]
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
