Added caddy Fixed compose deploy

--- a/.github/workflows/BuildAndPullToDockerHub.yml
+++ b/.github/workflows/BuildAndPullToDockerHub.yml
@@ -136,7 +136,7 @@ jobs:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_TOKEN }}
       - name: Build listenerApp application
-        run: cd listener-service && env GOOS=linux CGO_ENABLED=0 go build -o listenerApp ./cmd/api
+        run: cd listener-service && env GOOS=linux CGO_ENABLED=0 go build -o listenerApp .
       - name: Build listenerServiceApp Docker image
         run: cd mail-service && docker build -t arkadiyagapov/listenerapp:latest . -f listener-service.dockerfile
       - name: Push listenerApp to DockerHUB
